cabal-version:        2.2

name:                 hexdump-lazy
version:              0.1.0.0
synopsis:             Produce hex dumps lazily from various types of source
homepage:             https://github.com/neilmayhew/hexdump-lazy
license:              MIT
license-file:         LICENSE
author:               Neil Mayhew
maintainer:           neil@mayhew.name
copyright:            2020 Neil Mayhew

library
  hs-source-dirs:       src
  exposed-modules:      Text.HexDump
  build-depends:        base >=4.11.1.0,
                        bytestring >=0.10.8.2
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings

test-suite test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base >=4.11.1.0,
                        bytestring >=0.10.8.2,
                        deepseq,
                        process,
                        hexdump-lazy
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings
